# amiga_mcp

./: .gitattributes  .gitignore  Makefile  README.md  devbench.toml
.claude/commands/: fsuae-setup.md
amiga-bridge/: Makefile  amiga-bridge
amiga-bridge/include/: bridge_internal.h
amiga-bridge/src/: crash_handler.c  gfx_inspector.c  main.c  net_io.c  process_launcher.c  protocol_handler.c  serial_io.c  system_inspector.c  transport.c  version.c
amiga-deploy/: StartBridge  amiga-bridge  restart-bridge
amiga-devbench/: pyproject.toml
amiga-devbench/amiga_devbench/: config.py  emulator.py  file_transfer.py  fsuae_rpc.py  mcp_tools.py  protocol.py  screenshot.py  server.py  symbols.py
amiga-devbench/amiga_devbench/web/: index.html
amiga-devbench/tests/: test_script_async.py
docs/: tcp-transport.md  using-the-mcp.md
examples/ace_pilot/: ace_pilot  red_baron
examples/aga3d/: Makefile  aga3d  main.c
examples/alien_storm/: alien_storm  space_invaders
examples/boing_ball/: boing_ball
examples/bouncing_ball/: bouncing_ball
examples/gold_rush/: gold_rush  lode_runner
examples/jump_quest/: jump_quest  super_bros
examples/launcher/: launcher
examples/lunar_rider/: lunar_rider  moon_patrol
examples/metroid_quest/: Makefile  draw.c  draw.h  game.c  game.h  input.c  input.h  levels.c  main.c  metroid_quest  ptplayer.asm  ptplayer.h  stdint.h
examples/pacbro/: pacbro
examples/pea_shooter_blast/: pea_shooter_blast
examples/planet_patrol/: defender  planet_patrol
examples/rj_birthday/: rj_birthday
scripts/: install.ps1  install.sh
(+8 files in other folders)
