[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amiga-devbench"
version = "0.1.0"
description = "Host-side developer tool for Amiga cross-development with MCP integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.36.0",
    "uvicorn>=0.27.0",
    "sse-starlette>=1.8.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
amiga-devbench = "amiga_devbench.__main__:main"

[tool.setuptools.packages.find]
include = ["amiga_devbench*"]

[tool.setuptools.package-data]
amiga_devbench = ["web/*.html"]
